[package]
name = "grouplink"
version = "0.1.0"
authors = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]
edition = "2018"
license = "AGPL-3.0-only"

[dependencies]
async-trait = "0.1.41"
libc = "0.2.94"
libsignal-protocol = { git = "https://github.com/cosmicexplorer/libsignal-client.git", rev = "aee6669579d6bd9d56a0792c0d3ed0e1302d3cca" }
rand = "0.7"
prost = "0.7"
bytes = "1"
uuid = "0.8"
thiserror = "1.0.24"
displaydoc = "0.2"
parking_lot = "0.11.1"

[build-dependencies]
prost-build = "0.7"

[dev-dependencies]
futures = "0.3.7"
proptest = "1.0.0"
