[package]
name = "grouplink"
version = "0.1.0"
authors = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
displaydoc = "0.2"
grouplink-low-level = { path = "./low-level/" }
parking_lot = "0.11.1"
prost = "0.7"
thiserror = "1.0.24"

[build-dependencies]
prost-build = "0.7"

[workspace]
members = [
    ".",
    "low-level",
    "cli",
]
default-members = [
    # ".",
    "low-level",
    # "cli",
]
