[package]
name = "grouplink-cli"
version = "0.1.0"
authors = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
dirs = "3"
grouplink = { path = "../" }
thiserror = "1.0.24"
displaydoc = "0.2"
