[package]
name = "grouplink-cli"
version = "0.1.0"
authors = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
clap = "2"
dirs = "3"
displaydoc = "0.2"
grouplink = { path = "../" }
parking_lot = "0.11.1"
prost = "0.7"
thiserror = "1.0.24"

[build-dependencies]
prost-build = "0.7"
